# no-scams

./: .dockerignore  AGENTS.md  Dockerfile  PRIVACY.md  README.md  TERMS.md  pm2.json  pyproject.toml  ruff.toml  run.py
.github/: copilot-instructions.md
.github/workflows/: docker-build.yml
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
no_scams/: constants.py  health.py  message_store.py  utils.py
